--- a/WebFrontEnd/Pages/Shared/_Layout.cshtml
+++ b/WebFrontEnd/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - WebFrontEnd</title>
+    <title>@ViewData["Title"] - URL Shortener</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/WebFrontEnd.styles.css" asp-append-version="true" />
@@ -38,7 +38,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - WebFrontEnd - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2023 - URL Shortener - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
 
