fix about validating if an URL is large or short

--- a/WebFrontEnd/Pages/Index.cshtml
+++ b/WebFrontEnd/Pages/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model IndexModel
 @{
-    TempData["Title"] = "Home page";
+    ViewData["Title"] = "Home page";
 }
 
 <h1 class="display-3 text-center">URL Shortener</h1>
