--- a/WebFrontEnd/Pages/Index.cshtml
+++ b/WebFrontEnd/Pages/Index.cshtml
@@ -31,7 +31,7 @@
                         <input type="text" asp-for="ShortUrl.Destination" class="form-control" id="Destination">
                     </div>
                     <div class="mb-3">
-                        <label for="Path" class="form-label">Path (optional)</label>
+                        <label for="Path" class="form-label">Path</label>
                         <input type="text" asp-for="ShortUrl.Path" class="form-control" id="Path">
                         <h6 class="card-subtitle mb-2 text-muted">Path must be 10 characteres max for creation</h6>
                     </div>
