customization of health check ui

--- a/WebStatus/wwwroot/css/site.css
+++ b/WebStatus/wwwroot/css/site.css
@@ -1,3 +1,12 @@
+:root {
+    --primaryColor: #68217a;
+    --secondaryColor: #f4f4f4;
+    --bgMenuActive: #8e47a0;
+    --bgButton: #68217a;
+    --logoImageUrl: url('../../images/shortener.jpeg');
+    --bgAside: var(--primaryColor);
+}
+
 html {
   font-size: 14px;
 }
