--- a/WebAPI/wwwroot/swagger-ui/custom.css
+++ b/WebAPI/wwwroot/swagger-ui/custom.css
@@ -1,9 +1,7 @@
 ﻿body {
-    background-image: url("../images/ml.jpg");
+    background-image: url("../images/shortener.jpeg");
     background-size: 150px;
-    background-repeat: no-repeat;
-    /*background-position-x: center;
-    background-position-y: bottom 32px;*/
+    background-repeat: no-repeat;    
     background-position: left;
 }
 
